--- a/drowsiness/pubspec.yaml
+++ b/drowsiness/pubspec.yaml
@@ -1,6 +1,5 @@
 name: drowsy_guard
-description: AI-Powered Drowsiness Detection System
-
+description: AI-powered drowsiness detection app
 publish_to: 'none'
 version: 1.0.0+1
 
@@ -13,16 +12,15 @@ dependencies:
   camera: ^0.10.5+5
   http: ^1.1.0
   audioplayers: ^5.2.1
-  shared_preferences: ^2.2.2  # Added for persistent login storage
-  cupertino_icons: ^1.0.2
+  shared_preferences: ^2.2.2
+  network_info_plus: ^4.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
-  
   assets:
-    - assets/sounds/
+    - assets/sounds/alarm.mp3
